--- a/BlazorFile/BlazorFile.csproj
+++ b/BlazorFile/BlazorFile.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Uploads\NewFolder\" />
+    <Compile Remove="wwwroot\Uploads\**" />
+    <Content Remove="wwwroot\Uploads\**" />
+    <EmbeddedResource Remove="wwwroot\Uploads\**" />
+    <None Remove="wwwroot\Uploads\**" />
   </ItemGroup>
 
   <ItemGroup>
